# exe-dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md
agent/: Cargo.toml  README.md
agent/src/: main.rs
dashboard/: README.md  package-lock.json  package.json  tsconfig.json
dashboard/src/: index.ts
