[package]
name = "exe-agent"
version = "0.1.0"
edition = "2021"
description = "Metrics agent for exe-dashboard — exposes CPU/mem/disk/HTTP metrics over local HTTP."
license = "MIT"

# Keep this tree small — the binary is copied to every VM.
# Suggested deps for the MVP (add when implementing; see ../SPEC.md):
#   sysinfo      = "0.33"   # CPU / memory / disk
#   serde        = { version = "1", features = ["derive"] }
#   serde_json   = "1"
#   tiny_http / axum        # light HTTP server for GET /metrics, /healthz
[dependencies]

[profile.release]
strip = true
lto = true
opt-level = "z"   # small binary; metrics collection isn't hot
