[package]
name = "exe-agent"
version = "0.1.0"
edition = "2021"
description = "Metrics agent for exe-dashboard — exposes CPU/mem/disk/HTTP metrics over local HTTP."
license = "MIT"

# Keep this tree small — the binary is copied to every VM.
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.33.1"

[profile.release]
strip = true
lto = true
opt-level = "z"   # small binary; metrics collection isn't hot
